Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Core ReactOS
CORE-13503
[ATL] Missing operator+= overload for XCHAR in CStringT
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
Minor
Fix Version/s:
0.4.6
Component/s:
None
Labels:
PATCH
Module:
atl
Description
Self describing.
I made a small patch for it
cstringt.h.patch
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
cstringt.h.patch
2017-06-29 08:41
0.4 kB
sanchaez
cstringt.h.patch
2017-06-29 11:27
0.4 kB
sanchaez
Activity
People
Assignee:
Mark Jansen
Reporter:
sanchaez
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
2017-06-29 08:41
Updated:
2017-06-29 17:38
Resolved:
2017-06-29 17:10