[ATL] Add missing CString += overload (char). Patch by Alexander Shaposhnikov. CORE-13503

svn path=/trunk/; revision=75237